--- a/gb/22/3/9/n13631870.md
+++ b/gb/22/3/9/n13631870.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yadmko3863/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yadmko3863/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yadmko3863/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yadmko3863/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yadmko3863/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yadmko3863/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yadmko3863/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>奥克兰市长就三水改革再次声明其反对立场</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13631900-image001-600x400.jpg" />
 <h6>2022年3月8日，作为政府三水改革工作组的一员，奥克兰市长戈夫（Phil Goff）在发布的建议中再次表示，他并不认同该工作组推荐的未来新水务实体的管理模式。图为2021年9月16日在奥克兰机场的戈夫。(Phil Walter/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2022年03月09日讯】（大纪元记者刘淇晴<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>市长<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E6%88%88%E5%A4%AB.md#1">戈夫</a>（Phil Goff）与他所在的<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%B8%89%E6%B0%B4.md#1">三水</a>工作组其他成员意见相左。尽管他们已向政府建议了与iwi共同治理新水务实体的模式，但戈夫在建议中同样发布了自己的<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md#1">反对</a>意见。</p>
-<p>这个由20名成员组成的治理和问责制<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E4%B8%89%E6%B0%B4.md#1">三水</a>工作组由公共部门顾问马丁（Doug Martin）担任主席。他对Stuff表示，即将退休的<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E6%88%88%E5%A4%AB.md#1">戈夫</a>的意见得到了小组成员的尊重，“但并未得到同意”。</p>
-<p>该工作组建议政府就三水改革进行重大调整。作为工作组的一员，戈夫同意其中大部分工作，但在关键点上仍与其他人有分歧，包括<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>市议会在未来新实体中的有限发言权。</p>
-<p>政府计划在全国建立4个公有水务实体管理<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>的饮用水、雨水和废水，而奥克兰市议会拥有的水务资产将被合并到北部实体（northern entity）中。</p>
+<p>【大纪元2022年03月09日讯】（大纪元记者刘淇晴<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>市长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%88%E5%A4%AB.md#1">戈夫</a>（Phil Goff）与他所在的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%89%E6%B0%B4.md#1">三水</a>工作组其他成员意见相左。尽管他们已向政府建议了与iwi共同治理新水务实体的模式，但戈夫在建议中同样发布了自己的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md#1">反对</a>意见。</p>
+<p>这个由20名成员组成的治理和问责制<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%89%E6%B0%B4.md#1">三水</a>工作组由公共部门顾问马丁（Doug Martin）担任主席。他对Stuff表示，即将退休的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%88%E5%A4%AB.md#1">戈夫</a>的意见得到了小组成员的尊重，“但并未得到同意”。</p>
+<p>该工作组建议政府就三水改革进行重大调整。作为工作组的一员，戈夫同意其中大部分工作，但在关键点上仍与其他人有分歧，包括<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>市议会在未来新实体中的有限发言权。</p>
+<p>政府计划在全国建立4个公有水务实体管理<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>的饮用水、雨水和废水，而奥克兰市议会拥有的水务资产将被合并到北部实体（northern entity）中。</p>
 <p>尽管奥克兰市议会的资产占新实体的93%，并为整个北部地区90%的人口提供水务服务，但该议会在拥有14个席位的新地方代表小组中，仅有4个席位。</p>
 <p>新的地方代表小组有权任命新实体的董事会，并将监督新实体的相关工作。在该工作组支持的共同治理模式下，iwi代表将持有14个席位中的一半。</p>
 <p>作为已发布的工作组建议的一部分，戈夫表示，共同治理模式并不合适。</p>
@@ -23,7 +23,7 @@
 <p>“我们需要简化奥克兰基础设施的规划、资金和交付，而不是增加其复杂性，”他说。</p>
 <p>在把雨水纳入改革的问题上，戈夫希望政府可以推迟。他说，大家需要更充分地理解这一想法，以便可以“证明其利大于弊”。</p>
 <p>马丁表示，新的改革“是一项全系统的调整，奥克兰需要成为其中一环”。</p>
-<p>戈夫认可工作组取得的一些进步，但他在<ahref="https://github.com/yadmko3863/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md#1">反对</a>报告中引用的一项独立民意调查来支持自己的观点。调查显示，67%的受访者支持该市议会的立场。</p>
+<p>戈夫认可工作组取得的一些进步，但他在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%8D%E5%AF%B9.md#1">反对</a>报告中引用的一项独立民意调查来支持自己的观点。调查显示，67%的受访者支持该市议会的立场。</p>
 <p>同时，该调查显示，约90%的受访者在被民意调查者致电之前对改革知之甚少，甚至一无所知。</p>
 <p>2月初，奥克兰市议会公布了这项民调结果，表示希望工作组向地方政府部长汇报时，能提出在奥克兰建立一个单一水务实体的建议。</p>
 <p>责任编辑：蓝克</p>
@@ -32,56 +32,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13631597.md#1">新州政府提醒受灾居民警惕洪灾骗局</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13629837.md#1">堪培拉300多名公房租户被搬迁 政府遭抨击</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13629838.md#1">2022年首都行政区最佳女性揭晓</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13629859.md#1">首都行政区推出陪审团在线管理新系统</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13630133.md#1">悉尼暴雨成灾 逾20条主路被淹 好事围超市天花板坠落</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13629520.md#1">俄乌战 煤价再创新高 禁俄煤 澳煤出口或增</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13630015.md#1">澳制定七类关键商品供应链计划 确保经济安全</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13629930.md#1">悉尼西区洪水中惊现两具尸体</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/22/3/8/n13629816.md#1">日本脑炎病例增加 ?国际机构提醒澳人警惕</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/5/3/n12080294.md#1">奥市议会“富豪榜”七员工收入超总理</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/5/8/n12091702.md#1">奥克兰用水告急将限水 违禁行为最高罚2万</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/5/10/n12097744.md#1">奥克兰市长呼吁企业制定用水限制计划</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/5/28/n12144723.md#1">奥克兰市长 : 干旱为供水敲响了 “警钟”</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/7/4/n12231989.md#1">缺水严重的奥克兰水流失量超过节省量</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/8/17/n12338386.md#1">Watercare首席执行官拉文·贾杜拉姆辞职</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/8/26/n12359922.md#1">是什么导致奥克兰缺水？</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/9/20/n12417984.md#1">缓解干旱有望：东普基科希水库投入使用</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/10/4/n12451770.md#1">奥克兰市政问题及其解决方案浅谈</a></li>
-<li><a href="https://github.com/yadmko3863/djy/blob/master/gb/20/10/13/n12471581.md#1">10月12日起奥克兰商业用水限制放宽</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/3/n12080294.md#1">奥市议会“富豪榜”七员工收入超总理</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/8/n12091702.md#1">奥克兰用水告急将限水 违禁行为最高罚2万</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/10/n12097744.md#1">奥克兰市长呼吁企业制定用水限制计划</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144723.md#1">奥克兰市长 : 干旱为供水敲响了 “警钟”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/4/n12231989.md#1">缺水严重的奥克兰水流失量超过节省量</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/17/n12338386.md#1">Watercare首席执行官拉文·贾杜拉姆辞职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/26/n12359922.md#1">是什么导致奥克兰缺水？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/20/n12417984.md#1">缓解干旱有望：东普基科希水库投入使用</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/10/4/n12451770.md#1">奥克兰市政问题及其解决方案浅谈</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/10/13/n12471581.md#1">10月12日起奥克兰商业用水限制放宽</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513884.md#1" target="_blank">中共用战争的方式进行土改和镇反</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498401.md#1" target="_blank">孙盛起：撒旦横行，圣婴只能死去</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/26/n13607219.md#1">最是美丽的季节  错过了惊蛰将错过什么呢？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629649.md#1">战地记者Michael Yon：俄乌战争带来全球灾难</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629480.md#1">【神韵作品】飞天古典舞身韵身法基础训练组合 &#8211; 中级</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629157.md#1">【军事热点】美国促波兰向乌克兰转让战斗机</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/1/n13612944.md#1">专家点评：七类对心脏健康最不好的食物</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626434.md#1">一位医生分享：常吃五种食物 大大增强免疫</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/2/n13616600.md#1">俄乌战 习近平对普京误判 北京恐陷入风险</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629675.md#1">大S徐熙媛与“酷龙”具俊晔续前缘 宣布结婚</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629121.md#1">声援铁链女 中国导演胡雪杨发布同类题材新片</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626449.md#1">瑞莎曝乌克兰惨况 发文感谢台湾援助家乡</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/4/n13622027.md#1">西兰花让动脉变柔软！六大蔬菜保护心脏</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13625094.md#1">当季水果鲜甜营养 吃对了就不容易生病</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/26/n13606897.md#1">雨天鞋子湿掉怎么办？4方法可速干、不发臭</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626183.md#1">生活中霉菌别小觑 可增加疾病风险 如何去除</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yadmko3863/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/9/n13631870.htm">奥克兰市长就三水改革再次声明其反对立场</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/9/n13631870.htm">奥克兰市长就三水改革再次声明其反对立场</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yadmko3863/djy/blob/master/gb/22/3/9/n13631870.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yadmko3863/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yadmko3863/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yadmko3863/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yadmko3863/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yadmko3863/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/22/3/9/n13631870.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
